--- a/login/templates/vistasPrivadas/private.html
+++ b/login/templates/vistasPrivadas/private.html
@@ -4,41 +4,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta información del documento -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vista Privada</title>
+    <!-- Enlace a la hoja de estilos de Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body style="background-color: rgb(255, 255, 255);">
+    <!-- Barra de navegación -->
     <div class="navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color:black;  font: 20px verdana, sans-serif; display: inline-block;">
+              <!-- Enlace para desplegar el menú de opciones -->
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color:black; font: 20px verdana, sans-serif; display: inline-block;">
                   <span class="navbar-toggler-icon"></span>
               </a>
+              <!-- Menú desplegable -->
               <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" style="background-color: white;">
                   {% if user.is_authenticated %}
+                      <!-- Opción para buscar (visible si el usuario está autenticado) -->
                       <li>
                           <a class="dropdown-item menu-item" href="{% url 'buscar' %}">
                               <img src="https://img.icons8.com/ios-filled/24/000000/search.png" alt="Buscar"> Buscar
                           </a>
                       </li>
+                      <!-- Opción para cargar archivo (visible si el usuario está autenticado) -->
                       <li>
                           <a class="dropdown-item menu-item" href="{% url 'cargar_archivo' %}">
                               <img src="https://img.icons8.com/ios-filled/24/000000/upload.png" alt="Cargar Archivo"> Cargar
                           </a>
                       </li>
+                      <!-- Opción para ver egresados destacados (visible si el usuario está autenticado) -->
                       <li>
                           <a class="dropdown-item menu-item" href="{% url 'egresadosDestacados' %}">
                               <img src="https://img.icons8.com/?size=16&id=TICBrlr1XpVp&format=png" alt="Egresados Destacados"> Egresados Destacados
                           </a>
                       </li>
+                      <!-- Opción para editar la sección principal (visible si el usuario está autenticado) -->
                       <li>
                         <a class="dropdown-item menu-item" href="" data-bs-toggle="modal" data-bs-target="#editPrincipalModal">
                             <img src="https://img.icons8.com/ios-filled/24/000000/edit.png" alt="Editar Principal"> Editar Principal
                         </a>
                     </li>
                   {% endif %}
+              </ul>
+          </li>
+        </ul>
+    </div>
 </body>
 </html>
 {% endblock %}
