--- a/login/templates/vistasPrivadas/ver_trazabilidad.html
+++ b/login/templates/vistasPrivadas/ver_trazabilidad.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Información de metadatos para la página -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historial de Trazabilidad</title>
+    <!-- Enlace a la hoja de estilos de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <!-- Contenedor principal para el contenido -->
     <div class="container my-5">
+        <!-- Título con nombre y documento de la persona -->
         <h2 class="text-center mb-4">Historial de Trazabilidad de {{ persona.nombre }} - Documento: {{ persona.documento }}</h2>
         
+        <!-- Tabla que muestra la trazabilidad -->
         <div class="table-responsive">
             <table class="table table-striped table-hover">
+                <!-- Encabezado de la tabla con los nombres de las columnas -->
                 <thead class="table-success">
                     <tr>
                         <th>Fecha de Modificación</th>
@@ -22,6 +28,7 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <!-- Iteración sobre los objetos de trazabilidad -->
                     {% for trazabilidad in trazabilidades %}
                         <tr>
                             <td>{{ trazabilidad.fecha_modificacion }}</td>
@@ -33,11 +40,12 @@
                     {% endfor %}
                 </tbody>
             </table>
+            <!-- Enlace para volver a la página de resultados de búsqueda -->
             <a href="{% url 'buscar_resultado' persona.documento %}" class="btn btn-secondary">Volver</a>
         </div>
     </div>
 
+    <!-- Inclusión de los scripts de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
